----------------------------------------------------------------------
 OmegaT 2.6.3 update 5
----------------------------------------------------------------------
   0 Enhancement
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.6.3 update 5 vs. 2.6.3 update 4

  Bug fixes: 

  - Ignore content of sdl:seg-defs tags in OmegaT's XLIFF filter
  https://sourceforge.net/p/omegat/bugs/624/

  - Filtering the Editor results in losing unsaved changes in the current segment
  https://sourceforge.net/p/omegat/bugs/627/

----------------------------------------------------------------------
 OmegaT 2.6.3 update 4
----------------------------------------------------------------------
   0 Enhancement
   3 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.6.3 update 4 vs. 2.6.3 update 3

  Bug fixes: 

  - Visible tags (wp14:pctWidth" and "wp14:pctHeight") in the Editor
could prevent opening Word target documents if the content was changed

  - <releaseinfo> not declared as a paragraph tag in the DocBook filter 
  https://sourceforge.net/p/omegat/feature-requests/883/

  - When launching OmegaT from the command line in align mode 
(--mode=console-align), an error message occured: 
Exception in thread "main" java.util.MissingResourceException: Can't find 
resource for bundle java.util.PropertyResourceBundle, key INITIALIZING

----------------------------------------------------------------------
 OmegaT 2.6.3 update 3
----------------------------------------------------------------------
   0 Enhancement
   4 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.6.3 update 3 vs. 2.6.3 update 2

  Bug fixes: 

  - Team projects: duplicate entries could still happen in the writable 
glossary 

  - Restore default window when saved layout cannot be restored
  https://sourceforge.net/p/omegat/bugs/602/
